# leptos-animate

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  clippy.toml  justfile  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.cargo/: config.toml
e2e/: playwright.config.ts
examples/playground/: Cargo.toml  index.html
examples/playground/src/: config.rs  item.rs  lib.rs  main.rs  state.rs  store.rs
examples/playground/src/components/: controls.rs  item.rs
examples/playground/src/components/base/: button.rs  checkbox.rs  input.rs
examples/ssr/: Cargo.toml
examples/ssr/src/: app.rs  main.rs
examples/ssr/src/app/: button.rs  rotate_in.rs
src/: animate.rs  animation.rs  easing.rs  lib.rs  transition_duration.rs  utils.rs
src/animate/: initial.rs  use_observer.rs
src/animation/: aggregated.rs  ext.rs  listeners.rs
src/animations/: classes.rs  fade.rs  flip.rs  resize.rs  zombie.rs
src/animations/classes/: html_element_ext.rs  in.rs  out.rs
src/animations/fade/: in.rs  out.rs
src/animations/flip/: animation.rs  duration.rs
src/animations/resize/: animation.rs  duration.rs
src/animations/zoom/: in.rs  out.rs
src/utils/: add_oneshot_event_listener.rs  animation_frame.rs  log_error.rs  on_animations_finished_ext.rs  options.rs  sleep.rs  spawn_animation.rs  trackable.rs
