[workspace]
resolver = "2"
members = [".", "examples/playground", "examples/ssr"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
leptos = { version = "0.8.6" }
reactive_stores = { version = "0.2.5" }
reactive_stores_macro = { version = "0.2.5" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
log = "0.4.27"
rand = "0.9.2"
leptos_animate.path = "."

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
partial_pub_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
ref_patterns = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_to_string = "warn"
suspicious_operation_groupings = "warn"
trait_duplication_in_bounds = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
use_self = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[package]
name = "leptos_animate"
version = "0.1.6"
edition.workspace = true
description = "Animation utilities for Leptos. FLIP, in/out transitions, and helpers for custom animations."
repository = "https://github.com/brofrain/leptos-animate"
license = "MIT"

[dependencies]
leptos.workspace = true
reactive_stores.workspace = true
reactive_stores_macro.workspace = true
anyhow = "1.0.98"
bon = "3.6.5"
futures = "0.3.31"
paste = "1.0.15"
send_wrapper = "0.6.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "Animation",
  "AnimationEffect",
  "AnimationPlayState",
  "ComputedEffectTiming",
  "DomRect",
  "GetAnimationsOptions",
  "KeyframeAnimationOptions",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "Node",
] }

[lints]
workspace = true
