[package]
name = "ssr"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.4", optional = true }
leptos = { workspace = true }
leptos_meta = { version = "0.8.5" }
leptos_axum = { version = "0.8.6", optional = true }
leptos_router = { version = "0.8.6" }
leptos_animate.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom = { workspace = true, optional = true }
log.workspace = true
rand.workspace = true
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
], optional = true }
wasm-bindgen = "0.2.100"

[lints]
workspace = true

[features]
hydrate = ["dep:getrandom", "leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
default = ["ssr"]

[package.metadata.cargo-all-features]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "ssr-example"
bin-features = ["ssr"]
lib-features = ["hydrate"]
tailwind-input-file = "styles/tailwind.css"
